# file-storage-service-test_task

./: .env  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 2025_09_05_0001_init.py  2025_09_05_0002_files_visibility_status.py
app/api/routers/: auth.py  files.py  users.py
app/cli/: seed.py
app/core/: config.py  deps.py  security.py
app/db/: session.py
app/db/models/: department.py  enums.py  file.py  user.py
app/schemas/: file.py  user.py
app/services/: metadata.py  storage_s3.py
app/tasks/: celety_app.py  metada.py  metadata.py
app/utils/: magic.py  validators.py
docker/: api.Dockerfile  worker.Dockerfile
